--- a/style.css
+++ b/style.css
@@ -2,18 +2,16 @@
     background-color: yellow;
     width: 350px;
     height: 220px;
-    margin:  15px 10px 20px 10px;
-
+    margin-bottom: 30px;
+    padding-top: 15px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 20px;
     border: 2px dotted red;
-    padding: 15px;
-
-    
-
-   
-    
-
 }
 
 body{
     background-color: pink;
 }
+
+
